<resources>
    <string name="app_name">AtMS</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_out">Log out</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_success">"Login success"</string>


    <!-- Student Dashboard -->
    <string name="action_report_archive">Report Archive</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_an_attendance_sheet">Create an Attendance Sheet</string>
    <string name="classroom">Classroom</string>
    <string name="attendance_score">Attendance Score</string>
    <string name="give_a_name">Give a Name</string>
    <string name="create">Create</string>
    <string name="create_classroom">Create Classroom</string>
    <string name="course">Course</string>
    <string name="session">Session</string>
    <string name="action_create_classroom">New Classroom</string>
    <string name="action_create_attendance">New Attendance Sheet</string>

    <string-array name="courses">
        <item>CS 101</item>
        <item>CS 102</item>
        <item>CS 103</item>
        <item>CS 104</item>
        <item>CS 105</item>
    </string-array>

    <string-array name="sessions">
        <item>Session 1</item>
        <item>Session 2</item>
        <item>Session 3</item>
        <item>Session 4</item>
        <item>Session 5</item>
    </string-array>
</resources>